Confirm Spring RCE

--- a/content/notices/2022-03-29-spring.md
+++ b/content/notices/2022-03-29-spring.md
@@ -7,6 +7,12 @@ Slug: spring
 Summary: An unconfirmed, but possible, remote code execution vulnerability is believed to exist in Spring, an extremely popular Java framework. This issue is likely easily exploited in common configurations. If confirmed, another notice will be sent out with a severity of 'critical'. While unconfirmed, the severity has been assigned 'high'.
 ---
 
+##Update as of March 30th, 3:00PM New York time
+
+[Praetorian has confirmed the existence of this RCE in a recently-published blog post.](https://www.praetorian.com/blog/spring-core-jdk9-rce/)
+
+[A new Bug Alert notice has been added here.](/content/notices/2022-03-30-spring.html)
+
 ##Update as of March 30th, 1:30PM New York time
 
 The Bug Alert team is aware of claims of a PoC for a Spring core RCE. However, we are awaiting confirmation before raising any further alarms, and we have not been able to utilize the PoC successfully against real-world Spring installs that we have (legal) access to. Some security professionals have claimed, on Twitter, that they are able to utilize the PoC successfully against Spring instances running behind Tomcat.
